[gd_scene load_steps=7 format=3 uid="uid://b8gmq0nupsndv"]

[ext_resource type="Script" uid="uid://cj7t2aoe5s05m" path="res://context_menu.gd" id="1_8eruf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8eruf"]
bg_color = Color(0.16862746, 0.16862746, 0.16078432, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0f8wh"]
bg_color = Color(0.31916445, 0.31916708, 0.30663434, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_psh83"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2lrye"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8eruf"]

[node name="ContextMenu" type="Control" node_paths=PackedStringArray("multiple", "restart", "pause", "save", "delete", "stop_all_sounds", "loop")]
z_index = 1
z_as_relative = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8eruf")
multiple = NodePath("VBoxContainer/Multiple")
restart = NodePath("VBoxContainer/Restart")
pause = NodePath("VBoxContainer/Pause")
save = NodePath("VBoxContainer/Save")
delete = NodePath("VBoxContainer/Delete")
stop_all_sounds = NodePath("VBoxContainer/StopAllSounds")
loop = NodePath("VBoxContainer/Loop")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Multiple" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_8eruf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/hover = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_psh83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2lrye")
text = "Play Multiple On Click"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_8eruf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/hover = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_psh83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2lrye")
text = "Restart On Click"

[node name="Pause" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_8eruf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/hover = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_psh83")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2lrye")
text = "Pause On Click"

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_8eruf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/hover = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8eruf")
text = "Save"

[node name="Delete" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_8eruf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/hover = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8eruf")
text = "Delete"

[node name="StopAllSounds" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_8eruf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/hover = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8eruf")
text = "Stop All Sounds"

[node name="Loop" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_8eruf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/hover = SubResource("StyleBoxFlat_0f8wh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8eruf")
text = "Loop (not for multiple)"

[connection signal="pressed" from="VBoxContainer/Multiple" to="." method="_on_repeat_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/StopAllSounds" to="." method="_on_stop_all_sounds_pressed"]
[connection signal="pressed" from="VBoxContainer/Loop" to="." method="_on_loop_pressed"]
